Add switch variable to select normalization or not

--- a/lobster_volume_analysis.ipynb
+++ b/lobster_volume_analysis.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 106,
       "metadata": {
         "id": "qjxzDwXNZ0WH"
       },
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 107,
       "metadata": {
         "id": "FAc7oRjWaLuo"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 109,
       "metadata": {
         "id": "xawZpedVc3oM"
       },
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 110,
       "metadata": {
         "id": "oe1ae1AQaYAT"
       },
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 111,
       "metadata": {
         "id": "__5CffX0ku41"
       },
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 112,
       "metadata": {
         "id": "LM8mNlVAardG"
       },
@@ -398,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 113,
       "metadata": {
         "id": "2xuvbiDtacox"
       },
@@ -464,6 +464,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 114,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def compute_path_costmat(x, y):    \n",
+        "    N = x.shape[0]\n",
+        "    M = y.shape[0]\n",
+        "    print(\"Shape:\", N, M)\n",
+        "    dist_mat = np.zeros((N, M))\n",
+        "    for i in range(N):\n",
+        "        for j in range(M):\n",
+        "            dist_mat[i, j] = abs(x[i] - y[j])\n",
+        "\n",
+        "    # DTW\n",
+        "    path, cost_mat = dp(dist_mat)\n",
+        "    print(\"Alignment cost: {:.4f}\".format(cost_mat[N - 1, M - 1]))\n",
+        "    print(\"Normalized alignment cost: {:.4f}\".format(cost_mat[N - 1, M - 1]/(N + M)))\n",
+        "\n",
+        "    return path, cost_mat, dist_mat\n"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -473,12 +496,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 115,
       "metadata": {},
       "outputs": [],
       "source": [
         "def plot_dtw(dist_mat, cost_mat, path):\n",
-        "    \n",
         "    plt.figure(figsize=(6, 4))\n",
         "    plt.subplot(121)\n",
         "    plt.title(\"Distance matrix\")\n",
@@ -511,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 116,
       "metadata": {
         "id": "h_P3Dpd-gTPz"
       },
@@ -523,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 117,
       "metadata": {
         "id": "-NQT_xfBaxcf"
       },
@@ -586,28 +608,13 @@
         "  # DTW\n",
         "  x = df_ohlc[\"close\"]\n",
         "  y = df_ohlc[\"volume\"]\n",
-        "  \n",
-        "  # Normalize column\n",
         "  if NORMALIZE:\n",
-        "    scaler = MinMaxScaler()\n",
-        "    reshape = x.values.reshape(-1, 1)\n",
-        "    x = scaler.fit_transform(reshape)\n",
-        "    reshape = y.values.reshape(-1, 1)\n",
-        "    y = scaler.fit_transform(reshape)\n",
-        "  \n",
-        "  N = x.shape[0]\n",
-        "  M = y.shape[0]\n",
-        "  print(\"Shape:\", N, M)\n",
-        "  dist_mat = np.zeros((N, M))\n",
-        "  for i in range(N):\n",
-        "      for j in range(M):\n",
-        "          dist_mat[i, j] = abs(x[i] - y[j])\n",
-        "  \n",
-        "  # DTW\n",
-        "  path, cost_mat = dp(dist_mat)\n",
-        "  print(\"Alignment cost: {:.4f}\".format(cost_mat[N - 1, M - 1]))\n",
-        "  print(\"Normalized alignment cost: {:.4f}\".format(cost_mat[N - 1, M - 1]/(N + M)))\n",
-        "\n",
+        "      scaler = MinMaxScaler()\n",
+        "      reshape = x.values.reshape(-1, 1)\n",
+        "      x = scaler.fit_transform(reshape)\n",
+        "      reshape = y.values.reshape(-1, 1)\n",
+        "      y = scaler.fit_transform(reshape)\n",
+        "  path, cost_mat, dist_mat = compute_path_costmat(x, y)\n",
         "  plot_dtw(dist_mat, cost_mat, path)\n",
         "  plot_dtw_path(x, y, path)"
       ]
@@ -632,7 +639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 118,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8674,7 +8681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 119,
       "metadata": {},
       "outputs": [
         {
@@ -16706,7 +16713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [
         {
@@ -24754,7 +24761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [
         {
@@ -32800,7 +32807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 122,
       "metadata": {},
       "outputs": [
         {
