FIX: Fix absolute path for the dataset.

--- a/notebook/lobster_volume_analysis.ipynb
+++ b/notebook/lobster_volume_analysis.ipynb
@@ -82,9 +82,9 @@
         "# Google Colab\n",
         "# LOCAL_PATH = \"/content/dataset\"\n",
         "# Local\n",
-        "LOCAL_PATH = \"dataset\"\n",
+        "LOCAL_PATH = \"../dataset\"\n",
         "\n",
-        "DIR_DATA = \"dataset/\"\n",
+        "DIR_DATA = \"../dataset/\"\n",
         "\n",
         "# Name: \tTICKER_Year-Month-Day_StartTime_EndTime_message_LEVEL.csv \t\n",
         "\n",
