FIX: Fix relative path for the LOBSTER datsets.

--- a/notebook/lobster_volume_analysis.ipynb
+++ b/notebook/lobster_volume_analysis.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "qjxzDwXNZ0WH"
       },
@@ -24,17 +24,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Importing the dtw module. When using in academic works please cite:\n",
+            "  T. Giorgino. Computing and Visualizing Dynamic Time Warping Alignments in R: The dtw Package.\n",
+            "  J. Stat. Soft., doi:10.18637/jss.v031.i07.\n",
+            "\n"
+          ]
+        },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_9426/2307917293.py:18: MatplotlibDeprecationWarning:\n",
-            "\n",
-            "The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
-            "\n"
+            "/tmp/ipykernel_36277/2307917293.py:18: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+            "  mpl.style.use('seaborn')\n"
           ]
         }
       ],
@@ -73,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 3,
       "metadata": {
         "id": "FAc7oRjWaLuo"
       },
@@ -82,9 +90,9 @@
         "# Google Colab\n",
         "# LOCAL_PATH = \"/content/dataset\"\n",
         "# Local\n",
-        "LOCAL_PATH = \"../dataset\"\n",
+        "LOCAL_PATH = \"../dataset/LOBSTER-files\"\n",
         "\n",
-        "DIR_DATA = \"../dataset/\"\n",
+        "DIR_DATA = \"../dataset/LOBSTER-files/\"\n",
         "\n",
         "# Name: \tTICKER_Year-Month-Day_StartTime_EndTime_message_LEVEL.csv \t\n",
         "\n",
@@ -124,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -171,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "metadata": {
         "id": "xawZpedVc3oM"
       },
@@ -267,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {
         "id": "oe1ae1AQaYAT"
       },
@@ -300,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 7,
       "metadata": {
         "id": "__5CffX0ku41"
       },
@@ -344,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "metadata": {
         "id": "LM8mNlVAardG"
       },
@@ -441,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -480,7 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 10,
       "metadata": {
         "id": "h_P3Dpd-gTPz"
       },
@@ -492,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 11,
       "metadata": {
         "id": "-NQT_xfBaxcf"
       },
@@ -579,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -593,14 +601,12 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_9426/264788954.py:58: SettingWithCopyWarning:\n",
-            "\n",
-            "\n",
+            "/tmp/ipykernel_36277/264788954.py:58: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "\n"
+            "  executed_trades_messages[\"price\"] = executed_trades_messages[\"price\"] / 10000\n"
           ]
         },
         {
@@ -8543,14 +8549,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_9426/264788954.py:58: SettingWithCopyWarning:\n",
+            "/tmp/ipykernel_36277/264788954.py:58: SettingWithCopyWarning:\n",
             "\n",
             "\n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -16507,14 +16513,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_9426/264788954.py:58: SettingWithCopyWarning:\n",
+            "/tmp/ipykernel_36277/264788954.py:58: SettingWithCopyWarning:\n",
             "\n",
             "\n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -24481,14 +24487,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_9426/264788954.py:58: SettingWithCopyWarning:\n",
+            "/tmp/ipykernel_36277/264788954.py:58: SettingWithCopyWarning:\n",
             "\n",
             "\n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -32461,14 +32467,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_9426/264788954.py:58: SettingWithCopyWarning:\n",
+            "/tmp/ipykernel_36277/264788954.py:58: SettingWithCopyWarning:\n",
             "\n",
             "\n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
