updated yahoo finance notebook

--- a/notebook/yahoo_finance_dataset_analysis.ipynb
+++ b/notebook/yahoo_finance_dataset_analysis.ipynb
@@ -178,7 +178,7 @@
    "source": [
     "def compute_volatility(df):\n",
     "     # Compute the daily log return\n",
-    "    df['Log_returns'] = np.log(df['Close']/df['Close'].shift())\n",
+    "    df['Log_returns'] = np.log(df['Close']/df['Close'].shift())  # create new column 'Log_returns'\n",
     "    # Compute standard deviation\n",
     "    df['Log_returns'].std()\n",
     "    # Fill the missing values\n",
