--- a/notebook/stocks_correlation.ipynb
+++ b/notebook/stocks_correlation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +78,61 @@
    "metadata": {},
    "source": [
     "Since we are focusing on the correlation between the movement of stocks, we can concentrate on the Adjusted Close column and then create a new Pandas DataFrame with the base-10 logarithm of the daily percentage change. With the Pandas method .corr(), we can create a correlation matrix of the new dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  30 of 30 completed\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 251 entries, 2022-04-19 to 2023-04-18\n",
+      "Data columns (total 30 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   AAPL    251 non-null    float64\n",
+      " 1   AMGN    251 non-null    float64\n",
+      " 2   AXP     251 non-null    float64\n",
+      " 3   BA      251 non-null    float64\n",
+      " 4   CAT     251 non-null    float64\n",
+      " 5   CRM     251 non-null    float64\n",
+      " 6   CSCO    251 non-null    float64\n",
+      " 7   CVX     251 non-null    float64\n",
+      " 8   DIS     251 non-null    float64\n",
+      " 9   DOW     251 non-null    float64\n",
+      " 10  GS      251 non-null    float64\n",
+      " 11  HD      251 non-null    float64\n",
+      " 12  HON     251 non-null    float64\n",
+      " 13  IBM     251 non-null    float64\n",
+      " 14  INTC    251 non-null    float64\n",
+      " 15  JNJ     251 non-null    float64\n",
+      " 16  JPM     251 non-null    float64\n",
+      " 17  KO      251 non-null    float64\n",
+      " 18  MCD     251 non-null    float64\n",
+      " 19  MMM     251 non-null    float64\n",
+      " 20  MRK     251 non-null    float64\n",
+      " 21  MSFT    251 non-null    float64\n",
+      " 22  NKE     251 non-null    float64\n",
+      " 23  PG      251 non-null    float64\n",
+      " 24  TRV     251 non-null    float64\n",
+      " 25  UNH     251 non-null    float64\n",
+      " 26  V       251 non-null    float64\n",
+      " 27  VZ      251 non-null    float64\n",
+      " 28  WBA     251 non-null    float64\n",
+      " 29  WMT     251 non-null    float64\n",
+      "dtypes: float64(30)\n",
+      "memory usage: 60.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = pdr.get_data_yahoo(tickers, start, end)['Adj Close']\n",
+    "dataset.info()"
    ]
   },
   {
@@ -193,7 +248,6 @@
     }
    ],
    "source": [
-    "dataset = pdr.get_data_yahoo(tickers, start, end)['Adj Close']\n",
     "stocks_returns = np.log(dataset/dataset.shift(1))\n",
     "\n",
     "print('\\nCorrelation Matrix')\n",
