--- a/notebook/yahoo_finance_dataset_analysis.ipynb
+++ b/notebook/yahoo_finance_dataset_analysis.ipynb
@@ -41,17 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Importing the dtw module. When using in academic works please cite:\n",
-      "  T. Giorgino. Computing and Visualizing Dynamic Time Warping Alignments in R: The dtw Package.\n",
-      "  J. Stat. Soft., doi:10.18637/jss.v031.i07.\n",
-      "\n"
+      "/tmp/ipykernel_18042/1003949892.py:13: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "  mpl.style.use('seaborn')\n"
      ]
     }
    ],
@@ -59,14 +57,32 @@
     "# Here we have useful import\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from dtw import *\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "import datetime as dt\n",
+    "\n",
+    "\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
     "mpl.style.use('seaborn')\n",
     "# plt.rc(\"figure\", figsize=(10,10))  # size of the figure\n",
-    "# to quickly get access to a list of the tickers in different indices"
+    "# to quickly get access to a list of the tickers in different indices\n",
+    "\n",
+    "#  To Use online Yahoo Finance API\n",
+    "import warnings\n",
+    "from pandas_datareader import data as pdr\n",
+    "# to override deprecations in pandas-datareader\n",
+    "import yfinance as yf\n",
+    "# To set up the start/end dates for the prices\n",
+    "import datetime as dt\n",
+    "# to quickly get access to a list of the tickers in different indices\n",
+    "from yahoo_fin import stock_info as si\n",
+    "# Settings\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "yf.pdr_override()"
    ]
   },
   {
@@ -79,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +133,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "### Use Yhaoo API"
    ]
   },
@@ -911,9 +926,6 @@
    "metadata": {},
    "source": [
     "### Volatility"
-=======
-    "### **Volatility**"
->>>>>>> 3fe322d99b0dc53085d210445ff6db04bcf83431
    ]
   },
   {
@@ -941,17 +953,7 @@
    "source": [
     "We create a new column called 'Log returns' with the daily log return of the Close price.\n",
     "We use log returns instead of daily simple return, since the log returns have the advantage that you can add them together, while this is not the case for simple returns. Therefore the log returns are used in most financial analysis.\n",
-    "\n",
-    "We need **standard deviation** for the volatility of the stock that is computed in this way:\n",
-    "\n",
-    "$\\sigma_p = \\sigma_d * \\sqrt{p}$\n",
-    "\n",
-    "$\\sigma_a = \\sigma_d * \\sqrt{252}$\n",
-    "\n",
-    "**NOTE:**\n",
-    "- $\\sigma_d$ : means the *daily deviation*\n",
-    "- $\\sigma_a$ : means the *annualy deviation*\n",
-    "- 252 trading days per year"
+    "We need **standard deviation** for the volatility of the stock"
    ]
   },
   {
@@ -992,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **DTW**"
+    "### DTW"
    ]
   },
   {
@@ -1364,10 +1366,16 @@
     "for ticker in tickers[:2]:\n",
     "    # Create a new dataframe for each ticker\n",
     "    df = get_ticker_df(dataset, ticker)\n",
+    "    \n",
+    "    print(\"#\"*100)\n",
+    "    print(\"#        Ticker: \", ticker)\n",
+    "    print(\"#\"*100)\n",
+    "    \n",
     "    # Compute volatility\n",
     "    compute_volatility(df)\n",
     "    # Compute DTW\n",
-    "    compute_dtw(df, \"Volume\", \"Log_Returns\", normalize=True)"
+    "    compute_dtw(df, \"Volume\", \"Log_Returns\", normalize=True)\n",
+    "    \n"
    ]
   }
  ],
@@ -1387,7 +1395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
