update yahoo notebook with formula

--- a/notebook/yahoo_finance_dataset_analysis.ipynb
+++ b/notebook/yahoo_finance_dataset_analysis.ipynb
@@ -953,7 +953,17 @@
    "source": [
     "We create a new column called 'Log returns' with the daily log return of the Close price.\n",
     "We use log returns instead of daily simple return, since the log returns have the advantage that you can add them together, while this is not the case for simple returns. Therefore the log returns are used in most financial analysis.\n",
-    "We need **standard deviation** for the volatility of the stock"
+    "\n",
+    "We need **standard deviation** for the volatility of the stock that is computed in this way:\n",
+    "\n",
+    "$\\sigma_p = \\sigma_d * \\sqrt{p}$\n",
+    "\n",
+    "$\\sigma_a = \\sigma_d * \\sqrt{252}$\n",
+    "\n",
+    "**NOTE:**\n",
+    "- $\\sigma_d$ : means the *daily deviation*\n",
+    "- $\\sigma_a$ : means the *annualy deviation*\n",
+    "- 252 trading days per year"
    ]
   },
   {
