UPDATE: add comments and introduction of notebook's paper

--- a/notebook/dynamic_volum-return_correlation.ipynb
+++ b/notebook/dynamic_volum-return_correlation.ipynb
@@ -17,7 +17,7 @@
     " \n",
     "They tested it using the datasets of NYSE and AMEX from CRSP, but since we wasn't able to do it, since it requires some permits, we decided to download them from the Yahoo Finance site.\n",
     "\n",
-    "More specifically we download the **AXP** and **NYA** datasets with a time range of **5 years**."
+    "More specifically we download the **AXP**, **NYA** and **RUT** datasets with a time range of **5 years**."
    ]
   },
   {
